# advent-of-code-2024-cpp

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: main.cpp
src/aoc/: advent_of_code.cpp  advent_of_code.h  day_solution.h
src/aoc24/: day01.cpp  day01.h
